Praticando da aula 5

--- a/src/App.css
+++ b/src/App.css
@@ -114,7 +114,7 @@ font-family: 'Irish Grover';
   
 }
 
-/****************************************************************************/
+/*************************************** MEDIA SCREEN *************************************/
 @media screen and (min-width: 1000px){
   .app{
     
